# MIG-NCC-Calculation

./: .gitignore  CMakeLists.txt  README.md  main.cpp
