cmake_minimum_required(VERSION 3.16.3)
project(mig_ncc_testing)
find_package(OpenCV REQUIRED)
find_package(ZLIB REQUIRED)
set(XLSXWRITER_LIB ${CMAKE_CURRENT_SOURCE_DIR}/lib/libxlsxwriter)
add_executable(mig_ncc_testing main.cpp)
target_compile_options(mig_ncc_testing PRIVATE -std=c++17 -ggdb3)
include_directories(${OpenCV_INCLUDE_DIRS})
target_include_directories(mig_ncc_testing PRIVATE ${XLSXWRITER_LIB}/include)
target_link_libraries(mig_ncc_testing PRIVATE ${XLSXWRITER_LIB}/cmake/libxlsxwriter.a ${ZLIB_LIBRARIES} ${OpenCV_LIBS})